--- a/install.html
+++ b/install.html
@@ -103,7 +103,7 @@ $ chmod 777 cache</pre>
 </ol>
 
 <h2>It doesn't work !</h2>
-<p>See the <a href="faq.html">Frequently Asked Questions</a>.</p>
+<p>See the <a href="doc/faq.html">Frequently Asked Questions</a>.</p>
 
 <h2>Features</h2>
 <ul>
