Added prev/next in gantt head Added names in HTML templates

--- a/install.html
+++ b/install.html
@@ -116,7 +116,7 @@ $ chmod 777 cache</pre>
   <li>XHTML 1.0 compliant + CSS3. Accessibility checked.</li>
   <li>Templates driven. Create easily your templates with Smarty tags (or just a CSS) !</li>
   <li>Multilanguage capable (english by default ; french, german and swedish translations available). Dates are localized too.</li>
-  <li>RSS feeds available for any user</li>
+  <li>Atom and RSS feeds available for any user</li>
   <li>Optimized PHP code (and Smarty cache where applicable). OOP.</li>
   <li>Can export reports to a spreadsheet</li>
   <li>Allow specific tasks for a project. Only these tasks are shown when inputting an event<br />
