--- a/install.html
+++ b/install.html
@@ -125,7 +125,7 @@ $ chmod 777 cache</pre>
   <li>Password reminder</li>
   <li>Automatic duration calculation if only start and end time are input</li>
   <li>Time can be entered as hh-mm-ss hh:mm:ss hh,mm,ss hh;mm;ss or "hh mm ss" (with or without seconds)</li>
-  <li>passwords stored encrypted in the database</li>
+  <li>Passwords stored encrypted in the database. Password not send in clear text (nonce based authentication)</li>
   <li>You can use Sillaj as a backend for an OSX widget thanks to Johan Ström.
     See <a href="http://trac.stromnet.se/misc/wiki/Sillaj-Widget">Sillaj-Widget</a>
   </li>
