--- a/install.html
+++ b/install.html
@@ -44,8 +44,8 @@ a database backend and is themable through templates.</p>
 <p>Sillaj can be downloaded from <a href="http://sillaj.sourceforge.net/">http://sillaj.sourceforge.net/</a></p>
 
 <p>Created by Michaël Delorme - <a href="mailto:sillaj@gmail.com">sillaj@gmail.com</a><br />
-Thanks to janson.peter/@gmail.com for the swedish translation and to 
-lmoehri/@gwdg.de for the german translation</p>
+Thanks to janson.peter/@gmail.com for the swedish translation, to 
+lmoehri/@gwdg.de for the german translation and bert.fransen/@sygma.nl for the dutch translation</p>
 
 <p>See <a href="changes.txt">changes.txt</a> for version notes.</p>
 
@@ -86,7 +86,7 @@ $mysql> GRANT ALL ON sillaj.* to 'sillaj'@'localhost' IDENTIFIED BY 'sillaj';</p
   <li>Modify /inc/config.php 
     <ul>
       <li>Connection parameters according to your database settings</li>
-      <li>Chose your default language (french, swedish, german or english) and date formats</li>
+      <li>Chose your default language (french, swedish, german, dutch or english) and date formats</li>
       <li>If you want gantt graphs, set BOO_ENABLE_GRAPH_SILLAJ to true and enable GD (in your php.ini : uncomment <code>extension=php_gd2.dll</code> or <code>gd.so</code>)</li>
     </ul>
   </li>
