Small fixes (incl. days names for JSCal)

--- a/install.html
+++ b/install.html
@@ -121,7 +121,7 @@ $ chmod 777 cache</pre>
   <li>Can export reports to a spreadsheet</li>
   <li>Allow specific tasks for a project. Only these tasks are shown when inputting an event<br />
   (xmlhttprequest)</li>
-  <li>Search engine</li>
+  <li>Search engine (Opensearch compatibility)</li>
   <li>Password reminder</li>
   <li>Automatic duration calculation if only start and end time are input</li>
   <li>Time can be entered as hh-mm-ss hh:mm:ss hh,mm,ss hh;mm;ss or "hh mm ss" (with or without seconds)</li>
