--- a/install.html
+++ b/install.html
@@ -20,7 +20,7 @@
 <meta name="DC.Date.issued" content="2005-10-26" scheme="W3CDTF" />
 <title>Sillaj - install and features</title>
 <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
-<link rel="shortcut icon" type="image/x-icon" href="demo/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="stylesheet" type="text/css" href="templates/default/styles/default.css" media="all" title="Sillaj" />
 <link rel="stylesheet" type="text/css" href="templates/default/styles/print.css" media="print" />
 </head>
@@ -103,11 +103,11 @@ $ chmod 777 cache</pre>
 </ol>
 
 <h2>It doesn't work !</h2>
-<p>See the <a href="doc/faq.html">Frequently Asked Questions</a>.</p>
+<p>See the <a href="doc/faq.html">Frequently Asked Questions</a> or <a href="https://sourceforge.net/forum/forum.php?forum_id=461863" title="On sourceforge">the forum</a>.</p>
 
 <h2>Features</h2>
 <ul>
-  <li>Multiuser ; each user has its own projects/tasks. Users can see other people's reports (if allowed on site-wide basis <em>and</em> if the users allowed)<br />
+  <li><strong>Multiuser</strong> ; each user has its own projects/tasks. Users can see other people's reports (if allowed on site-wide basis <em>and</em> if the users allowed)<br />
     People can share their tasks and projects, so a team can use the same parameters and build
     complete and accurate time reports.</li>
   <li>Reports by project or task. Full events listing for a project or a task.</li>
@@ -115,7 +115,7 @@ $ chmod 777 cache</pre>
   <li>Can hide some projects or tasks in reports (ex : vacations)</li>
   <li>XHTML 1.0 compliant + CSS3. Accessibility checked.</li>
   <li>Templates driven. Create easily your templates with Smarty tags (or just a CSS) !</li>
-  <li>Multilanguage capable (english by default ; french, german and swedish translations available). Dates are localized too.</li>
+  <li><strong>Multilanguage capable</strong> (english by default ; dutch, french, german and swedish translations available). Dates are localized too.</li>
   <li>Atom and RSS feeds available for any user</li>
   <li>Optimized PHP code (and Smarty cache where applicable). OOP.</li>
   <li>Can export reports to a spreadsheet</li>
